[workspace]
members = [
    "zingolib",
    "zingocli",
    "zingoconfig",
    "zingo-memo"
]

[profile.release]
debug = false

[patch.crates-io]
zcash_note_encryption = { git = "https://github.com/zingolabs/librustzcash", rev = "01e6bf65542d3ad8190c798a01436d9edcd9f990" }
zcash_primitives = { git = "https://github.com/zingolabs/librustzcash", rev = "01e6bf65542d3ad8190c798a01436d9edcd9f990" }
orchard = { git = "https://github.com/zingolabs/orchard", rev = "49874b31da4fedcb31fcfadf5ba8804bf860c4bf" }